<resources>
    <string name="app_name" translatable="false">Simplenote</string>
    <string name="app_launcher_name" translatable="false">@string/app_name</string>
    <string name="tag_hint">Add tag&#8230;</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="new_note">New Note</string>
    <string name="account">Account</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_email_message">By deleting the account for email %1$s, all notes created with this account will be permanently deleted. This action is not reversible.</string>
    <string name="request_received">Request Received</string>
    <string name="account_deletion_message">An email was sent to %1$s. Check your inbox and follow the instructions to confirm account deletion.\n\nYour account won\'t be deleted until we receive your confirmation.</string>
    <string name="error_ocurred_message">An error occurred. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="requesting_message">Requesting…</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="words">Words</string>
    <string name="invalid_tag">Invalid Tag</string>
    <string name="tag_added_as_collaborator">%1$s added as a collaborator.</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="rename_tag_error_empty">Tags cannot be empty</string>
    <string name="rename_tag_error_length">Tag length too long</string>
    <string name="rename_tag_error_spaces">Tags cannot contain spaces</string>
    <string name="rename_tag_message">An error occurred renaming the tag. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="rename_tag_message_length">The tag length is too long. Please, try again with a shorter name. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="tag_name">Tag name</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Empty</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="confirm_empty_trash">Do you want to empty the trash? All notes in trash will be permanently deleted. This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="word">Word</string>
    <string name="website">Visit website</string>
    <string name="more">More</string>
    <string name="send_logs">Send logs</string>
    <string name="note_selected">%d note selected</string>
    <string name="notes_selected">%d notes selected</string>
    <string name="note_added">Note added</string>
    <string name="search">Search Notes or Tags</string>
    <string name="search_hint">Search notes or tags</string>
    <string name="search_tags">Search Tags</string>
    <string name="search_tags_hint">Search tags</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_error_message">An error occurred deleting the note. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="delete_dialog_message">Do you want to permanently delete this note? This action cannot be undone.</string>
    <string name="delete_dialog_title">Delete Permanently</string>
    <string name="trash">Trash</string>
    <string name="untagged_notes">Untagged Notes</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="information">Information</string>
    <string name="tags">Tags</string>
    <string name="edit">Edit</string>
    <string name="pin">Pin</string>
    <string name="toggle_pin">Toggle Pin to Top</string>
    <string name="pin_to_top">Pin to Top</string>
    <string name="unpin_from_top">Unpin from Top</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="synced">Synced</string>
    <string name="tab_edit">Edit</string>
    <string name="tab_preview">Preview</string>
    <string name="list_hide">Hide List</string>
    <string name="list_show">Show List</string>
    <string name="markdown">Markdown</string>
    <string name="markdown_hide">Hide Markdown</string>
    <string name="markdown_show">Show Markdown</string>
    <string name="character">Character</string>
    <string name="characters">Characters</string>
    <string name="logo">Logo</string>
    <string name="copy_link">Copy Link</string>
    <string name="copy_link_internal">Copy Internal Link</string>
    <string name="more_options">More Options</string>
    <string name="open_note">Open Note</string>
    <string name="open_note_error">Note could not be found</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="of">of</string>
    <string name="membership">Membership</string>
    <string name="membership_free">Free</string>
    <string name="membership_free_upgrade">Upgrade</string>
    <string name="membership_premium">Premium</string>
    <string name="references">Referenced In</string>
    <string name="references_one">%1$d Reference, Last modified %2$s</string>
    <string name="references_other">%1$d References, Last modified %2$s</string>
    <string name="settings_item_get_help">Get help</string>
    <string name="web_view_error">A web view must be installed on your device to preview markdown.</string>
    <string name="web_view_error_button">Go to WebView app</string>
    <string name="support_email" translatable="false">\u003c\u0061\u0020\u0068\u0072\u0065\u0066\u003d\u0022\u006d\u0061\u0069\u006c\u0074\u006f\u003a\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0073\u0069\u006d\u0070\u006c\u0065\u006e\u006f\u0074\u0065\u002e\u0063\u006f\u006d\u0022\u003e\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0073\u0069\u006d\u0070\u006c\u0065\u006e\u006f\u0074\u0065\u002e\u0063\u006f\u006d\u003c\u002f\u0061\u003e</string>
    <string name="empty_tags_hint">Once you add tags to your notes, your tags will appear here.</string>
    <string name="dialog_message_signup_error">We\'re having problems. Please try again soon.</string>
    <string name="email_confirmation_text">We\'ve sent an email to %1$s. Please check your inbox and follow the instructions.</string>
    <string name="support_text">Didn\'t get an email? You may already have an account. Contact %1$s for help.</string>
    <string name="dialog_already_logged_in_title">Already Logged In</string>
    <string name="dialog_already_logged_in_message">You are already logged in as %1$s. Log out and try again.</string>
    <string name="export_file">simplenote.json</string>
    <string name="import_error_file">Cannot read file</string>
    <string name="import_error_parse">Cannot parse file</string>
    <string name="import_message_success">Data loaded</string>
    <string name="import_unknown">Unknown format</string>
    <string name="export_message_failure">Data could not be saved</string>
    <string name="export_message_success">Data saved to file</string>
    <string name="import_setting">Import data</string>
    <string name="export_setting">Export data</string>
    <string name="editor">Editor</string>
    <string name="condensed_note_list">Condensed note list</string>
    <string name="sort_order">Sort order</string>
    <string name="detect_links">Detect links</string>
    <string name="share_analytics">Share analytics</string>
    <string name="share_analytics_summary">Help us improve Simplenote by sharing usage data with our analytics tool. %1$sLearn more%2$s</string>
    <string name="sustainer_app_icon">Sustainer app icon</string>
    <string name="add_tag">Add Tag</string>
    <string name="dialog_tag_add_button_negative" translatable="false">@android:string/cancel</string>
    <string name="dialog_tag_add_button_positive" translatable="false">@string/save</string>
    <string name="dialog_tag_add_hint" translatable="false">@string/tag_name</string>
    <string name="dialog_tag_add_title" translatable="false">@string/add_tag</string>
    <string name="dialog_tag_error_message">An error occurred adding the tag. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="dialog_tag_error_message_email" translatable="false">\u003c\u0061\u0020\u0068\u0072\u0065\u0066\u003d\u0022\u006d\u0061\u0069\u006c\u0074\u006f\u003a\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0073\u0069\u006d\u0070\u006c\u0065\u006e\u006f\u0074\u0065\u002e\u0063\u006f\u006d\u0022\u003e\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0073\u0069\u006d\u0070\u006c\u0065\u006e\u006f\u0074\u0065\u002e\u0063\u006f\u006d\u003c\u002f\u0061\u003e</string>
    <string name="tag_error_empty">Tags cannot be empty</string>
    <string name="tag_error_exists">Tag already exists</string>
    <string name="tag_error_length">Tag length too long</string>
    <string name="tag_error_spaces">Tags cannot contain spaces</string>
    <string name="tag_error_collaborator">Tags cannot be emails</string>
    <string name="undo">Undo</string>
    <string name="note_deleted">Note trashed.</string>
    <string name="notes_trashed">Notes trashed.</string>
    <string name="sort_newest_modified">Modified: Newest</string>
    <string name="sort_oldest_modified">Modified: Oldest</string>
    <string name="sort_newest_created">Created: Newest</string>
    <string name="sort_oldest_created">Created: Oldest</string>
    <string name="sort_alphabetical">Name: A-Z</string>
    <string name="sort_alphabetical_reverse">Name: Z-A</string>
    <string name="style_classic">Classic</string>
    <string name="style_mono">Mono</string>
    <string name="style_preview">![Image](%1$s%2$s%3$shttps://img_url.com/jpg%4$s) Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius, ante eget lobortis mollis, felis leo maximus dolor, at mattis purus turpis et mi. Morbi a sapien turpis.</string>
    <string name="history">History</string>
    <string name="description_locked">Locked</string>
    <string name="passcode_preference_title">Passcode Lock</string>
    <string name="action">Action</string>
    <string name="item_action_note_new" translatable="false">@string/new_note</string>
    <string name="item_action_open_search">Open Search</string>
    <string name="key_multiple_ctrl" translatable="false">Ctrl</string>
    <string name="key_multiple_shift" translatable="false">Shift</string>
    <string name="key_single_i" translatable="false">I</string>
    <string name="key_single_s" translatable="false">S</string>
    <string name="simperium_button_signup">Sign Up</string>
    <string name="simperium_footer_signup">By creating an account, you agree to our %1$s%2$s%3$sTerms and Conditions%4$s</string>
    <string name="simperium_hint_email">Email</string>
    <string name="magic_link_login">Log in with email</string>
    <string name="login_with_password">Login With Password</string>
    <string name="passkey_link_login">Log In With A Passkey</string>
</resources>