<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sort_alphabetical"
        android:title="@string/sort_alphabetical">
    </item>

    <item
        android:id="@+id/sort_alphabetical_reverse"
        android:title="@string/sort_alphabetical_reverse">
    </item>

    <item
        android:id="@+id/sort_newest_created"
        android:title="@string/sort_newest_created">
    </item>

    <item
        android:id="@+id/sort_oldest_created"
        android:title="@string/sort_oldest_created">
    </item>

    <item
        android:id="@+id/sort_newest_modified"
        android:title="@string/sort_newest_modified">
    </item>

    <item
        android:id="@+id/sort_oldest_modified"
        android:title="@string/sort_oldest_modified">
    </item>

</menu>
