<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_note_preferences"
        android:title="@string/settings" >
        <!--<SwitchPreference
            android:defaultValue="true"
            android:key="pref_key_show_dates"
            android:title="@string/show_dates" />-->
        <!--<SwitchPreference
            android:defaultValue="true"
            android:key="pref_key_detect_links"
            android:title="@string/detect_links" />-->

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_key_condensed_note_list"
            android:title="@string/condensed_note_list" />

        <!--<ListPreference
            android:defaultValue="@string/normal"
            android:entries="@array/array_font_size"
            android:entryValues="@array/array_font_size"
            android:key="pref_key_font_size"
            android:title="@string/font_size" />-->
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/array_sort_order"
            android:entryValues="@array/array_sort_order_values"
            android:key="pref_key_sort_order"
            android:summary="%s"
            android:title="@string/sort_order" />
        <Preference
            android:key="pref_key_passcode"
            android:title="@string/passcode_preference_title" >
            <intent android:targetClass="org.wordpress.passcodelock.PasscodePreferencesActivity"
                android:targetPackage="com.automattic.simplenote"/>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
            android:key="pref_key_account_preferences"
            android:title="@string/account" >
        <Preference
                android:key="pref_key_authenticate"
                android:layout="@layout/auth_preference" />
        <!--<Preference
                android:key="pref_key_billing"
                android:persistent="false"
                android:title="@string/premium_title" />-->
    </PreferenceCategory>

    <PreferenceCategory
            android:key="pref_key_account_preferences"
            android:title="@string/more_info" >
        <Preference
                android:key="pref_key_website"
                android:persistent="false"
                android:title="@string/website" />
    </PreferenceCategory>

</PreferenceScreen>