<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_link"
        android:icon="@drawable/ic_link_24dp"
        android:title="@string/copy_link_internal"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_pin"
        android:icon="@drawable/ic_pinned_24dp"
        android:title="@string/toggle_pin"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_trash"
        android:icon="@drawable/ic_trash_24dp"
        android:title="@string/trash"
        app:showAsAction="always">
    </item>

</menu>
