<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_view_info"
        android:icon="?attr/actionBarIconInfo"
        app:showAsAction="ifRoom"
        android:title="@string/note_info"/>

    <item
            android:id="@+id/menu_share"
            app:showAsAction="ifRoom"
            android:title="@string/share"
            android:icon="?attr/actionBarIconShare"/>

    <item
            android:id="@+id/menu_markdown"
            android:checkable="true"
            android:title="@string/markdown"
            android:visible="false"
            app:showAsAction="never" />

    <item
            android:id="@+id/menu_delete"
            app:showAsAction="never"
            android:title="@string/delete"/>

</menu>