<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_history"
        app:showAsAction="always"
        android:icon="@drawable/ic_history_24dp"
        android:title="@string/history"
        android:enabled="false" />

    <item
        android:id="@+id/menu_share"
        app:showAsAction="always"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/share"
        android:enabled="false" />

    <item
        android:id="@+id/menu_view_info"
        android:icon="@drawable/ic_info_24dp"
        app:showAsAction="always"
        android:enabled="false"
        android:title="@string/note_info"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_trash_24dp"
        app:showAsAction="always"
        android:title="@string/delete" />

</menu>
