<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:clipToPadding="false"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_large"
        android:paddingTop="@dimen/padding_large">

        <TextView
            android:layout_height="@dimen/header_height"
            android:layout_width="match_parent"
            android:text="@string/action"
            style="@style/Shortcut.Header">
        </TextView>

        <RelativeLayout
            android:id="@+id/shortcut_note_new"
            android:layout_height="?android:listPreferredItemHeightSmall"
            android:layout_marginEnd="@dimen/padding_extra_extra_large"
            android:layout_marginStart="@dimen/padding_extra_extra_large"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/shortcut_note_new_key_third"
                android:layout_height="@dimen/key_height"
                android:layout_width="wrap_content"
                android:text="@string/key_single_i"
                style="@style/Shortcut.Key.Single">
            </TextView>

            <TextView
                android:id="@+id/shortcut_note_new_key_second"
                android:layout_height="@dimen/key_height"
                android:layout_toStartOf="@+id/shortcut_note_new_key_third"
                android:layout_width="wrap_content"
                android:text="@string/key_multiple_shift"
                style="@style/Shortcut.Key.Multiple">
            </TextView>

            <TextView
                android:id="@+id/shortcut_note_new_key_first"
                android:layout_height="@dimen/key_height"
                android:layout_toStartOf="@+id/shortcut_note_new_key_second"
                android:layout_width="wrap_content"
                android:text="@string/key_multiple_ctrl"
                style="@style/Shortcut.Key.Multiple">
            </TextView>

            <TextView
                android:id="@+id/shortcut_note_new_text"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/shortcut_note_new_key_first"
                android:layout_width="wrap_content"
                android:text="@string/item_action_note_new"
                tools:ignore="RelativeOverlap"
                style="@style/Shortcut.Item">
            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shortcut_open_search"
            android:layout_height="?android:listPreferredItemHeightSmall"
            android:layout_marginEnd="@dimen/padding_extra_extra_large"
            android:layout_marginStart="@dimen/padding_extra_extra_large"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/shortcut_open_search_key_third"
                android:layout_height="@dimen/key_height"
                android:layout_width="wrap_content"
                android:text="@string/key_single_s"
                style="@style/Shortcut.Key.Single">
            </TextView>

            <TextView
                android:id="@+id/shortcut_open_search_key_second"
                android:layout_height="@dimen/key_height"
                android:layout_toStartOf="@+id/shortcut_open_search_key_third"
                android:layout_width="wrap_content"
                android:text="@string/key_multiple_shift"
                style="@style/Shortcut.Key.Multiple">
            </TextView>

            <TextView
                android:id="@+id/shortcut_open_search_key_first"
                android:layout_height="@dimen/key_height"
                android:layout_toStartOf="@+id/shortcut_open_search_key_second"
                android:layout_width="wrap_content"
                android:text="@string/key_multiple_ctrl"
                style="@style/Shortcut.Key.Multiple">
            </TextView>

            <TextView
                android:id="@+id/shortcut_open_search_text"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/shortcut_open_search_key_first"
                android:layout_width="wrap_content"
                android:text="@string/item_action_open_search"
                tools:ignore="RelativeOverlap"
                style="@style/Shortcut.Item">
            </TextView>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
