<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/width_layout"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:clipToPadding="false"
    android:padding="@dimen/margin_default"
    tools:layout_width="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margin_default_quarter"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default_quarter"
        android:layout_marginBottom="@dimen/margin_default_quarter"
        android:hint="@string/simperium_hint_email"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/passkey_action_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_email"
        android:layout_marginTop="@dimen/margin_default_quarter"
        android:layout_marginBottom="@dimen/margin_default_quarter"
        android:backgroundTint="@color/button_primary_disabled_selector"
        android:minHeight="@dimen/height_button"
        android:text="@string/passkey_link_login"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passkey_action_button"
        android:layout_marginTop="@dimen/margin_default_quarter"
        android:layout_marginBottom="@dimen/margin_default_quarter"
        android:backgroundTint="@color/button_primary_disabled_selector"
        android:minHeight="@dimen/height_button"
        android:text="@string/magic_link_login"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/login_with_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_password"
        android:layout_below="@id/button"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
