<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingEnd="@dimen/padding_preference_end"
    android:paddingStart="@dimen/padding_preference_start"
    tools:context=".PreferencesActivity">

    <TextView
        android:id="@android:id/title"
        android:ellipsize="end"
        android:fadingEdge="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_toStartOf="@id/button"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textColor="?android:attr/textColorPrimary"
        tools:text="@string/membership">
    </TextView>

    <TextView
        android:id="@android:id/summary"
        android:ellipsize="end"
        android:fadingEdge="horizontal"
        android:layout_alignStart="@android:id/title"
        android:layout_below="@android:id/title"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_toStartOf="@id/button"
        android:layout_width="match_parent"
        android:maxLines="4"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?android:attr/textColorSecondary"
        android:visibility="gone"
        tools:text="@string/membership_free"
        tools:visibility="visible">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="openBrowserForMembership"
        android:text="@string/membership_free_upgrade"
        style="@style/Widget.MaterialComponents.Button.TextButton">
    </com.google.android.material.button.MaterialButton>

</RelativeLayout>
